--- a/src/telegram/webapp/cloud-storage.html
+++ b/src/telegram/webapp/cloud-storage.html
@@ -35,6 +35,11 @@
       <input id="chat-message" type="text" placeholder="message" />
       <button id="btn-send">Send to chat</button>
     </div>
+    <div class="row">
+      <label for="backend-message">Send to backend</label>
+      <input id="backend-message" type="text" placeholder="payload" />
+      <button id="btn-backend">Send to backend</button>
+    </div>
     <pre id="output">Ready.</pre>
 
     <script>
@@ -95,6 +100,28 @@
         // noinspection JSUnresolvedFunction
         tg.sendData(JSON.stringify({ type: 'webapp_message', message }));
         log('Sent to bot.');
+      };
+
+      document.getElementById('btn-backend').onclick = async () => {
+        const payload = document.getElementById('backend-message').value.trim();
+        if (!payload) return log('Payload is required.');
+        if (!tg || !tg.initData) {
+          return log('initData is not available. Open inside Telegram.');
+        }
+        try {
+          const response = await fetch('/webapp/webapp-auth', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+              initData: tg.initData,
+              payload: { message: payload },
+            }),
+          });
+          const json = await response.json();
+          log(JSON.stringify(json, null, 2));
+        } catch (error) {
+          log('Error: ' + error.message);
+        }
       };
     </script>
   </body>
